--- a/Infoware.UnitOfWork/Infoware.UnitOfWork.csproj
+++ b/Infoware.UnitOfWork/Infoware.UnitOfWork.csproj
@@ -8,7 +8,7 @@
     <Company>Infoware Soluciones</Company>
     <Description>Implementation of UnitOfWork.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/vicosanz/Infoware.SRI</RepositoryUrl>
+    <RepositoryUrl>https://github.com/vicosanz/Infoware.UnitOfWork</RepositoryUrl>
     <Version>1.0.0</Version>
   </PropertyGroup>
 
