--- a/Infoware.UnitOfWork/Infoware.UnitOfWork.csproj
+++ b/Infoware.UnitOfWork/Infoware.UnitOfWork.csproj
@@ -4,12 +4,14 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Authors>Victor Sanchez</Authors>
-    <Company>Infoware Soluciones</Company>
     <Description>Implementation of UnitOfWork.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/vicosanz/Infoware.UnitOfWork</PackageProjectUrl>
     <RepositoryUrl>https://github.com/vicosanz/Infoware.UnitOfWork</RepositoryUrl>
+    <Authors>Victor Sanchez</Authors>
+    <Company>Infoware Soluciones</Company>
     <Version>1.0.0</Version>
+    <PackageReleaseNotes>Implementation of UnitOfWork</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
