--- a/Infoware.QueryablePagedList/Infoware.QueryablePagedList.csproj
+++ b/Infoware.QueryablePagedList/Infoware.QueryablePagedList.csproj
@@ -13,5 +13,8 @@
 	  <Version>1.0.0</Version>
 	  <PackageReleaseNotes>Queryable PagedList</PackageReleaseNotes>
   </PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.26" />
+	</ItemGroup>
 
 </Project>
