--- a/Infoware.UnitOfWork/Infoware.UnitOfWork.csproj
+++ b/Infoware.UnitOfWork/Infoware.UnitOfWork.csproj
@@ -15,9 +15,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ardalis.Specification" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.26" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.26" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Infoware.Specification.EfCore\Infoware.Specification.EfCore.csproj" />
   </ItemGroup>
 
 </Project>
