--- a/Infoware.Specification.EfCore/Infoware.Specification.EfCore.csproj
+++ b/Infoware.Specification.EfCore/Infoware.Specification.EfCore.csproj
@@ -4,13 +4,14 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	  <LangVersion>latest</LangVersion>
 	  <Description>Specification EFCore</Description>
 	  <PackageLicenseExpression>MIT</PackageLicenseExpression>
 	  <PackageProjectUrl>https://github.com/vicosanz/Infoware.UnitOfWork</PackageProjectUrl>
 	  <RepositoryUrl>https://github.com/vicosanz/Infoware.UnitOfWork</RepositoryUrl>
 	  <Authors>Victor Sanchez</Authors>
 	  <Company>Infoware Soluciones</Company>
-	  <Version>1.0.0</Version>
+	  <Version>1.0.1</Version>
 	  <PackageReleaseNotes>Queryable PagedList</PackageReleaseNotes>
   </PropertyGroup>
 
@@ -18,6 +19,10 @@
     <PackageReference Include="Ardalis.Specification" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.26" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.26" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Infoware.UnitOfWork\Infoware.UnitOfWork.csproj" />
   </ItemGroup>
 
 </Project>
