--- a/Infoware.UnitOfWork/Infoware.UnitOfWork.csproj
+++ b/Infoware.UnitOfWork/Infoware.UnitOfWork.csproj
@@ -4,23 +4,21 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Description>Implementation of UnitOfWork.</Description>
+	  <LangVersion>latest</LangVersion>
+	  <Description>Implementation of UnitOfWork.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/vicosanz/Infoware.UnitOfWork</PackageProjectUrl>
     <RepositoryUrl>https://github.com/vicosanz/Infoware.UnitOfWork</RepositoryUrl>
     <Authors>Victor Sanchez</Authors>
     <Company>Infoware Soluciones</Company>
-    <Version>1.0.3</Version>
+    <Version>1.0.4</Version>
     <PackageReleaseNotes>Implementation of UnitOfWork</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.26" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.26" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Infoware.Specification.EfCore\Infoware.Specification.EfCore.csproj" />
+	  <PackageReference Include="Ardalis.Specification" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
