--- a/Infoware.Specification.EfCore/Infoware.Specification.EfCore.csproj
+++ b/Infoware.Specification.EfCore/Infoware.Specification.EfCore.csproj
@@ -1,10 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	  <LangVersion>latest</LangVersion>
 	  <Description>Specification EFCore</Description>
 	  <PackageLicenseExpression>MIT</PackageLicenseExpression>
 	  <PackageProjectUrl>https://github.com/vicosanz/Infoware.UnitOfWork</PackageProjectUrl>
